PSSR3: SID-7 and 23

--- a/JUICE-CDF-HF-SID20_sample.ipynb
+++ b/JUICE-CDF-HF-SID20_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID20 (Burst rich): L1a QL -- 2023/11/15"
+    "# JUICE RPWI HF SID20 (Burst rich): L1a QL -- 2023/11/18"
    ]
   },
   {
@@ -305,7 +305,7 @@
     "ax8.set_ylabel('Date-Time')\n",
     "ax8.set_xlabel(str_date)\n",
     "#\n",
-    "title_label = '[JUICE/RPWI HF SID-20] ' + data_name\n",
+    "title_label = '[JUICE/RPWI HF Burst-Rich (SID-20)]  ' + data_name\n",
     "ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8); ax2.legend(loc='upper right', fontsize=8); ax3.legend(loc='upper right', fontsize=8); \n",
     "ax4.legend(loc='upper right', fontsize=8); ax5.legend(loc='upper right', fontsize=8); ax6.legend(loc='upper right', fontsize=8); \n",
@@ -442,7 +442,7 @@
     "date1 = data.epoch[n0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[n1];  date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
     "date3 = data.epoch[n2];  date3 = date3.strftime('%Y/%m/%d %R:%S')\n",
-    "title_date = date1 + \"  -  \" + date2 + \"  -  \" + date3 \n",
+    "title_date = \"[\" + data_name + \"]  \" + date1 + \"  -  \" + date2 + \"  -  \" + date3 \n",
     "ax1.set_title(title_date)\n",
     "ax1.legend(loc='upper right', fontsize=8)\n",
     "ax5.legend(loc='upper right', fontsize=8); ax6.legend(loc='upper right', fontsize=8);  ax7.legend(loc='upper right', fontsize=8)\n",
@@ -500,7 +500,7 @@
     "ax1.set_ylabel('Frequency [kHz]'); ax2.set_ylabel('Frequency [kHz]'); ax3.set_ylabel('Frequency [kHz]')\n",
     "\n",
     "# X-axis\n",
-    "ax1.set_title('EuEu');             ax2.set_title('EvEv');             ax3.set_title('EwEw')\n",
+    "ax1.set_title(\"[\" + data_name + \"]  \" + 'EuEu');             ax2.set_title('EvEv');             ax3.set_title('EwEw')\n",
     "ax3.set_xlabel(str_date)\n",
     "\n",
     "# Plot\n",
@@ -556,7 +556,7 @@
     "ax7.set_ylabel('Frequency [kHz]'); ax8.set_ylabel('Frequency [kHz]'); ax9.set_ylabel('Frequency [kHz]')\n",
     "\n",
     "# X-axis\n",
-    "ax1.set_title('Deg. Lin. uv');     ax2.set_title('Deg. Lin. vw');     ax3.set_title('Deg. Lin. wu')\n",
+    "ax1.set_title(\"[\" + data_name + \"]  \" + 'Deg. Lin. uv');     ax2.set_title('Deg. Lin. vw');     ax3.set_title('Deg. Lin. wu')\n",
     "ax4.set_title('Deg. Cir. uv');     ax5.set_title('Deg. Cir. vw');     ax6.set_title('Deg. Cir. wu')\n",
     "ax7.set_title('Ang. uv');          ax8.set_title('Ang. vw');          ax9.set_title('Ang. wu')\n",
     "ax9.set_xlabel(str_date)\n",
@@ -670,7 +670,7 @@
     "date2 = data.epoch[n1];  date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
     "date3 = data.epoch[n2];  date3 = date3.strftime('%Y/%m/%d %R:%S')\n",
     "title_date = date1 + \"  -  \" + date2 + \"  -  \" + date3 \n",
-    "ax1.set_title(title_date)\n",
+    "ax1.set_title(\"[\" + data_name + \"]  \" + title_date)\n",
     "ax1.legend(loc='upper right', fontsize=8); ax2.legend(loc='upper right', fontsize=8)\n",
     "\n",
     "# range: X-axis\n",
@@ -716,7 +716,7 @@
     "ax1.set_ylabel('Frequency [kHz]'); ax2.set_ylabel('Frequency [kHz]'); ax3.set_ylabel('Frequency [kHz]')\n",
     "\n",
     "# X-axis\n",
-    "ax1.set_title('EuEu cleaned');     ax2.set_title('EvEv cleaned');     ax3.set_title('EwEw cleaned')\n",
+    "ax1.set_title(\"[\" + data_name + \"]  \" + 'EuEu cleaned');     ax2.set_title('EvEv cleaned');     ax3.set_title('EwEw cleaned')\n",
     "ax3.set_xlabel(str_date)\n",
     "\n",
     "# Plot\n",
