--- a/JUICE-CDF-HF-SID21_sample.ipynb
+++ b/JUICE-CDF-HF-SID21_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID21 (PSSR1 rich): L1a QL -- 2023/11/16"
+    "# JUICE RPWI HF SID21 (PSSR1 rich): L1a QL -- 2023/11/18"
    ]
   },
   {
@@ -279,16 +279,13 @@
     "\n",
     "ax1.set_ylabel(power_str)\n",
     "if data.complex[0] > 0:    # Matrix\n",
-    "    ax2.set_ylabel('Real & Img')\n",
-    "    ax3.set_ylabel('Deg. Pol.')\n",
-    "    ax4.set_ylabel('Deg. Linear Pol.')\n",
-    "    ax5.set_ylabel('Deg. Circular Pol.')\n",
-    "    ax6.set_ylabel('Linear Deg.')\n",
+    "    ax2.set_ylabel('Real & Img');          ax3.set_ylabel('Deg. Pol.');  ax4.set_ylabel('Deg. Linear Pol.')\n",
+    "    ax5.set_ylabel('Deg. Circular Pol.');  ax6.set_ylabel('Linear Deg.')\n",
     "ax7.set_ylabel('frequency [kHz]')\n",
     "ax8.set_ylabel('Date-Time')\n",
     "ax8.set_xlabel(str_date)\n",
     "#\n",
-    "title_label = '[JUICE/RPWI HF SID-21]  ' + data_name\n",
+    "title_label = '[JUICE/RPWI HF PSSR1-Rich (SID-21)]  ' + data_name\n",
     "ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8); ax7.legend(loc='upper right', fontsize=8)\n",
     "if data.complex[0] > 0:    # Matrix\n",
@@ -428,7 +425,7 @@
     "date1 = data.epoch[n0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[n1];  date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
     "date3 = data.epoch[n2];  date3 = date3.strftime('%Y/%m/%d %R:%S')\n",
-    "title_date = date1 + \"  -  \" + date2 + \"  -  \" + date3 \n",
+    "title_date = \"[\" + data_name + \"]  \" + date1 + \"  -  \" + date2 + \"  -  \" + date3 \n",
     "ax1.set_title(title_date)\n",
     "ax1.legend(loc='upper right', fontsize=8)\n",
     "ax5.legend(loc='upper right', fontsize=8); ax6.legend(loc='upper right', fontsize=8);  ax7.legend(loc='upper right', fontsize=8)\n",
@@ -486,15 +483,15 @@
     "\n",
     "# X-axis\n",
     "if   data.U_selected[0]==1 and data.V_selected[0]==1:\n",
-    "    ax1.set_title('EuEu');             ax2.set_title('EvEv')\n",
+    "    ax1.set_title(\"[\" + data_name + \"]  \" + 'EuEu');             ax2.set_title('EvEv')\n",
     "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EuEu_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
     "    p2 = ax2.pcolormesh(Epoch_1d, freq_1d, EvEv_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
     "elif data.V_selected[0]==1 and data.W_selected[0]==1:\n",
-    "    ax1.set_title('EvEv');             ax2.set_title('EwEw')\n",
+    "    ax1.set_title(\"[\" + data_name + \"]  \" + 'EvEv');             ax2.set_title('EwEw')\n",
     "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EvEv_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
     "    p2 = ax2.pcolormesh(Epoch_1d, freq_1d, EwEw_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
     "else:\n",
-    "    ax2.set_title('EwEw');             ax3.set_title('EuEu')\n",
+    "    ax2.set_title(\"[\" + data_name + \"]  \" + 'EwEw');             ax3.set_title('EuEu')\n",
     "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EwEw_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
     "    p2 = ax2.pcolormesh(Epoch_1d, freq_1d, EuEu_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
     "ax2.set_xlabel(str_date)\n",
@@ -538,17 +535,17 @@
     "\n",
     "# X-axis\n",
     "if   data.U_selected[0]==1 and data.V_selected[0]==1:\n",
-    "    ax1.set_title('Deg. Lin. uv'); ax2.set_title('Deg. Cir. uv');     ax3.set_title('Ang. uv');\n",
+    "    ax1.set_title(\"[\" + data_name + \"]  \" + 'Deg. Lin. uv'); ax2.set_title('Deg. Cir. uv');     ax3.set_title('Ang. uv');\n",
     "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, E_DoLuv_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
     "    p2 = ax2.pcolormesh(Epoch_1d, freq_1d, E_DoCuv_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
     "    p3 = ax3.pcolormesh(Epoch_1d, freq_1d, E_ANGuv_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
     "elif data.V_selected[0]==1 and data.W_selected[0]==1:\n",
-    "    ax1.set_title('Deg. Lin. vw'); ax2.set_title('Deg. Cir. vw');     ax3.set_title('Ang. vw');  \n",
+    "    ax1.set_title(\"[\" + data_name + \"]  \" + 'Deg. Lin. vw'); ax2.set_title('Deg. Cir. vw');     ax3.set_title('Ang. vw');  \n",
     "    p2 = ax1.pcolormesh(Epoch_1d, freq_1d, E_DoLvw_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
     "    p5 = ax2.pcolormesh(Epoch_1d, freq_1d, E_DoCvw_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
     "    p8 = ax3.pcolormesh(Epoch_1d, freq_1d, E_ANGvw_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
     "else:\n",
-    "    ax1.set_title('Deg. Lin. wu'); ax2.set_title('Deg. Cir. wu');     ax3.set_title('Ang. wu')\n",
+    "    ax1.set_title(\"[\" + data_name + \"]  \" + 'Deg. Lin. wu'); ax2.set_title('Deg. Cir. wu');     ax3.set_title('Ang. wu')\n",
     "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, E_DoLwu_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
     "    p2 = ax2.pcolormesh(Epoch_1d, freq_1d, E_DoCwu_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
     "    p3 = ax3.pcolormesh(Epoch_1d, freq_1d, E_ANGwu_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
@@ -644,7 +641,7 @@
     "date1 = data.epoch[n0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[n1];  date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
     "date3 = data.epoch[n2];  date3 = date3.strftime('%Y/%m/%d %R:%S')\n",
-    "title_date = date1 + \"  -  \" + date2 + \"  -  \" + date3 \n",
+    "title_date = \"[\" + data_name + \"]  \" + date1 + \"  -  \" + date2 + \"  -  \" + date3 \n",
     "ax1.set_title(title_date)\n",
     "ax1.legend(loc='upper right', fontsize=8); ax2.legend(loc='upper right', fontsize=8)\n",
     "\n",
@@ -693,15 +690,15 @@
     "\n",
     "# X-axis\n",
     "if   data.U_selected[0]==1 and data.V_selected[0]==1:\n",
-    "    ax1.set_title('EuEu cleaned'); ax2.set_title('EvEv cleaned')\n",
+    "    ax1.set_title(\"[\" + data_name + \"]  \" + 'EuEu cleaned'); ax2.set_title('EvEv cleaned')\n",
     "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EuEu_c_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
     "    p2 = ax2.pcolormesh(Epoch_1d, freq_1d, EvEv_c_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
     "elif data.V_selected[0]==1 and data.W_selected[0]==1:\n",
-    "    ax1.set_title('EvEv cleaned'); ax2.set_title('EwEw cleaned')\n",
+    "    ax1.set_title(\"[\" + data_name + \"]  \" + 'EvEv cleaned'); ax2.set_title('EwEw cleaned')\n",
     "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EvEv_c_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
     "    p2 = ax2.pcolormesh(Epoch_1d, freq_1d, EwEw_c_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
     "else:\n",
-    "    ax2.set_title('EwEw cleaned'); ax3.set_title('EuEu cleaned')\n",
+    "    ax2.set_title(\"[\" + data_name + \"]  \" + 'EwEw cleaned'); ax3.set_title('EuEu cleaned')\n",
     "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EwEw_c_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
     "    p2 = ax2.pcolormesh(Epoch_1d, freq_1d, EuEu_c_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
     "ax2.set_xlabel(str_date)\n",
