--- a/JUICE-CDF-HF-SID22_sample.ipynb
+++ b/JUICE-CDF-HF-SID22_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID22 (PSSR2 rich): L1a QL -- 2023/11/17"
+    "# JUICE RPWI HF SID22 (PSSR2 rich): L1a QL -- 2023/11/18"
    ]
   },
   {
@@ -182,7 +182,7 @@
     "ax3.set_ylabel('Date-Time')\n",
     "ax3.set_xlabel(str_date)\n",
     "#\n",
-    "title_label = '[JUICE/RPWI HF SID-22]  ' + data_name\n",
+    "title_label = '[JUICE/RPWI HF PSSR2-Rich (SID-22)]  ' + data_name\n",
     "ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8);  ax2.legend(loc='upper right', fontsize=8)\n",
     "\n",
@@ -243,8 +243,7 @@
     "ax16.plot(data.time[1:], data.auto_corr[n_sweep][15][1:], linewidth=.5)\n",
     "\n",
     "date1 = data.epoch[n_sweep];  date1 = date1.strftime('First: %Y/%m/%d %R:%S')\n",
-    "title_date = date1\n",
-    "ax1.set_title(title_date)\n",
+    "title_date = \"[\" + data_name + \"]  \" + date1;  ax2.set_title(title_date)\n",
     "#\n",
     "ax1.set_xlabel(\"#1: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][0]))\n",
     "ax2.set_xlabel(\"#2: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][1]))\n",
@@ -309,8 +308,7 @@
     "ax16.plot(data.time[1:], data.auto_corr[n_sweep][15][1:], linewidth=.5)\n",
     "\n",
     "date1 = data.epoch[n_sweep];  date1 = date1.strftime('Mid: %Y/%m/%d %R:%S')\n",
-    "title_date = date1\n",
-    "ax1.set_title(title_date)\n",
+    "title_date = \"[\" + data_name + \"]  \" + date1;  ax2.set_title(title_date)\n",
     "#\n",
     "ax1.set_xlabel(\"#1: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][0]))\n",
     "ax2.set_xlabel(\"#2: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][1]))\n",
@@ -376,8 +374,7 @@
     "ax16.plot(data.time[1:], data.auto_corr[n_sweep][15][1:], linewidth=.5)\n",
     "\n",
     "date1 = data.epoch[n_sweep];  date1 = date1.strftime('Last: %Y/%m/%d %R:%S')\n",
-    "title_date = date1\n",
-    "ax1.set_title(title_date)\n",
+    "title_date = \"[\" + data_name + \"]  \" + date1;  ax2.set_title(title_date)\n",
     "#\n",
     "ax1.set_xlabel(\"#1: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][0]))\n",
     "ax2.set_xlabel(\"#2: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][1]))\n",
