--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -6,7 +6,7 @@
    "id": "a116756d",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2023/11/15"
+    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2023/11/19"
    ]
   },
   {
@@ -99,6 +99,13 @@
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
     "data_name = 'SID03_20231024-0036.cdf'\n",
+    "data_name = 'SID03-2ch-comp0-20231117-1438.cdf'\n",
+    "data_name = 'SID03-2ch-comp1-20231117-1448.cdf'\n",
+    "data_name = 'SID03-2ch-comp2-20231117-1500.cdf'\n",
+    "data_name = 'SID03-3ch-comp0-20231117-1424.cdf'\n",
+    "data_name = 'SID03-3ch-comp1-20231117-1418.cdf'\n",
+    "data_name = 'SID03-3ch-comp2-20231117-1429.cdf'\n",
+    "data_name = 'SID03-3ch-comp3-20231117-1432.cdf'\n",
     "\n",
     "# 202310 -- FS\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202310_FS/cdf/'        # CDF data folder\n",
@@ -433,16 +440,12 @@
     "\n",
     "ax1.set_ylabel(power_str)\n",
     "if data.complex[0] > 0:    # Matrix\n",
-    "    ax2.set_ylabel('Real & Img')\n",
-    "    ax3.set_ylabel('Deg. Pol.')\n",
-    "    ax4.set_ylabel('Deg. Linear Pol.')\n",
-    "    ax5.set_ylabel('Deg. Circular Pol.')\n",
-    "    ax6.set_ylabel('Linear Deg.')\n",
-    "ax7.set_ylabel('frequency [kHz]')\n",
+    "    ax2.set_ylabel('Real & Img');          ax3.set_ylabel('Deg. Pol.');    ax4.set_ylabel('Deg. Linear Pol.')\n",
+    "    ax5.set_ylabel('Deg. Circular Pol.');  ax6.set_ylabel('Linear Deg.');  ax7.set_ylabel('frequency [kHz]')\n",
     "ax8.set_ylabel('Date-Time')\n",
     "ax8.set_xlabel(str_date)\n",
     "#\n",
-    "title_label = '[JUICE/RPWI HF SID-3] ' + data_name\n",
+    "title_label = '[JUICE/RPWI HF Full (SID-3)]  ' + data_name\n",
     "ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8); ax2.legend(loc='upper right', fontsize=8); ax3.legend(loc='upper right', fontsize=8); \n",
     "ax4.legend(loc='upper right', fontsize=8); ax5.legend(loc='upper right', fontsize=8); ax6.legend(loc='upper right', fontsize=8); \n",
@@ -499,6 +502,7 @@
     "p_min0 = p_min;  p_max0 = p_max\n",
     "\n",
     "fig = plt.figure(figsize=(12, 12))\n",
+    "#\n",
     "ax1 = fig.add_subplot(4, 1, 1)\n",
     "ax5 = fig.add_subplot(4, 1, 2)\n",
     "ax6 = fig.add_subplot(4, 1, 3)\n",
@@ -585,7 +589,7 @@
     "date1 = data.epoch[n0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[n1];  date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
     "date3 = data.epoch[n2];  date3 = date3.strftime('%Y/%m/%d %R:%S')\n",
-    "title_date = date1 + \"  -  \" + date2 + \"  -  \" + date3 \n",
+    "title_date = \"[\" + data_name + \"]  \" + date1 + \"  -  \" + date2 + \"  -  \" + date3\n",
     "ax1.set_title(title_date)\n",
     "ax1.legend(loc='upper right', fontsize=8)\n",
     "ax5.legend(loc='upper right', fontsize=8); ax6.legend(loc='upper right', fontsize=8);  ax7.legend(loc='upper right', fontsize=8)\n",
@@ -645,7 +649,7 @@
     "ax1.set_ylabel('Frequency [kHz]'); ax2.set_ylabel('Frequency [kHz]'); ax3.set_ylabel('Frequency [kHz]')\n",
     "\n",
     "# X-axis\n",
-    "ax1.set_title('EuEu');             ax2.set_title('EvEv');             ax3.set_title('EwEw')\n",
+    "ax1.set_title(\"[\" + data_name + \"]  \" + 'EuEu');  ax2.set_title('EvEv'); ax3.set_title('EwEw')\n",
     "ax3.set_xlabel(str_date)\n",
     "\n",
     "# Plot\n",
@@ -705,7 +709,7 @@
     "ax7.set_ylabel('Frequency [kHz]'); ax8.set_ylabel('Frequency [kHz]'); ax9.set_ylabel('Frequency [kHz]')\n",
     "\n",
     "# X-axis\n",
-    "ax1.set_title('Deg. Lin. uv');     ax2.set_title('Deg. Lin. vw');     ax3.set_title('Deg. Lin. wu')\n",
+    "ax1.set_title(\"[\" + data_name + \"]  \" + 'Deg. Lin. uv');     ax2.set_title('Deg. Lin. vw');     ax3.set_title('Deg. Lin. wu')\n",
     "ax4.set_title('Deg. Cir. uv');     ax5.set_title('Deg. Cir. vw');     ax6.set_title('Deg. Cir. wu')\n",
     "ax7.set_title('Ang. uv');          ax8.set_title('Ang. vw');          ax9.set_title('Ang. wu')\n",
     "ax9.set_xlabel(str_date)\n",
@@ -826,7 +830,7 @@
     "date1 = data.epoch[n0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[n1];  date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
     "date3 = data.epoch[n2];  date3 = date3.strftime('%Y/%m/%d %R:%S')\n",
-    "title_date = date1 + \"  -  \" + date2 + \"  -  \" + date3 \n",
+    "title_date = \"[\" + data_name + \"]  \" + date1 + \"  -  \" + date2 + \"  -  \" + date3 \n",
     "ax1.set_title(title_date)\n",
     "ax1.legend(loc='upper right', fontsize=8); ax2.legend(loc='upper right', fontsize=8)\n",
     "\n",
@@ -839,7 +843,7 @@
     "png_fname = work_dir+data_name+'_spec-c.png'\n",
     "if f_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_spec-log-c.png'\n",
-    "# fig.savefig(png_fname"
+    "    # fig.savefig(png_fname"
    ]
   },
   {
@@ -877,7 +881,7 @@
     "ax1.set_ylabel('Frequency [kHz]'); ax2.set_ylabel('Frequency [kHz]'); ax3.set_ylabel('Frequency [kHz]')\n",
     "\n",
     "# X-axis\n",
-    "ax1.set_title('EuEu cleaned');     ax2.set_title('EvEv cleaned');     ax3.set_title('EwEw cleaned')\n",
+    "ax1.set_title(\"[\" + data_name + \"]  \" + 'EuEu cleaned');     ax2.set_title('EvEv cleaned');     ax3.set_title('EwEw cleaned')\n",
     "ax3.set_xlabel(str_date)\n",
     "\n",
     "# Plot\n",
@@ -893,7 +897,7 @@
     "png_fname = work_dir+data_name+'_FT-c.png'\n",
     "if f_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_FT-log-c.png'\n",
-    "# fig2d.savefig(png_fname)"
+    "    # fig2d.savefig(png_fname)"
    ]
   }
  ],
