--- a/JUICE-CDF-HF-SID4_sample.ipynb
+++ b/JUICE-CDF-HF-SID4_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID4 (Burst surv): L1a QL -- 2023/11/15"
+    "# JUICE RPWI HF SID4 (Burst surv): L1a QL -- 2023/11/18"
    ]
   },
   {
@@ -104,6 +104,8 @@
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
     "data_name = 'SID04_20231024-0042.cdf'\n",
+    "data_name = 'SID04-comp0-20231117-1529.cdf'\n",
+    "data_name = 'SID04-comp1-20231117-1532.cdf'\n",
     "\n",
     "# 202310 -- FS\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202310_FS/cdf/'        # CDF data folder\n",
@@ -284,16 +286,13 @@
     "\n",
     "ax1.set_ylabel(power_str)\n",
     "if data.complex[0] > 0:    # Matrix\n",
-    "    ax2.set_ylabel('Real & Img')\n",
-    "    ax3.set_ylabel('Deg. Pol.')\n",
-    "    ax4.set_ylabel('Deg. Linear Pol.')\n",
-    "    ax5.set_ylabel('Deg. Circular Pol.')\n",
-    "    ax6.set_ylabel('Linear Deg.')\n",
+    "    ax2.set_ylabel('Real & Img');          ax3.set_ylabel('Deg. Pol.');    ax4.set_ylabel('Deg. Linear Pol.')\n",
+    "    ax5.set_ylabel('Deg. Circular Pol.');  ax6.set_ylabel('Linear Deg.'); \n",
     "ax7.set_ylabel('frequency [kHz]')\n",
     "ax8.set_ylabel('Date-Time')\n",
     "ax8.set_xlabel(str_date)\n",
     "#\n",
-    "title_label = '[JUICE/RPWI HF SID-4] ' + data_name\n",
+    "title_label = '[JUICE/RPWI HF Burst-Surv (SID-4)]  ' + data_name\n",
     "ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8); ax7.legend(loc='upper right', fontsize=8)\n",
     "if data.complex[0] > 0:    # Matrix\n",
@@ -416,22 +415,19 @@
     "    ax7.plot(freq1, data.E_ANGwu[n2], '-b', linewidth=0.8,  label='wu end')\n",
     "    #\n",
     "    if f_mode == 1:\n",
-    "        ax5.set_xscale('log');  ax6.set_xscale('log');  ax7.set_xscale('log')   # ax3.set_xscale('log');  ax4.set_xscale('log')\n",
+    "        ax5.set_xscale('log');  ax6.set_xscale('log');  ax7.set_xscale('log');  # ax3.set_xscale('log');  ax4.set_xscale('log')\n",
     "\n",
     "# Label\n",
     "ax1.set_ylabel(power_str)\n",
     "if data.complex[0] > 0:    # Matrix\n",
-    "    ax5.set_ylabel('Deg. Linear Pol.')\n",
-    "    ax6.set_ylabel('Deg. Circular Pol.')\n",
-    "    ax7.set_ylabel('Linear Deg.')\n",
-    "    # ax4.set_ylabel('Deg. Pol.')\n",
-    "    # ax3.set_ylabel('Real & Img')\n",
+    "    ax5.set_ylabel('Deg. Linear Pol.');  ax6.set_ylabel('Deg. Circular Pol.');  ax7.set_ylabel('Linear Deg.')\n",
+    "    # ax4.set_ylabel('Deg. Pol.');       ax3.set_ylabel('Real & Img')\n",
     "ax7.set_xlabel('frequency [Hz]')\n",
     "#\n",
     "date1 = data.epoch[n0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[n1];  date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
     "date3 = data.epoch[n2];  date3 = date3.strftime('%Y/%m/%d %R:%S')\n",
-    "title_date = date1 + \"  -  \" + date2 + \"  -  \" + date3 \n",
+    "title_date = \"[\" + data_name + \"]  \" + date1 + \"  -  \" + date2 + \"  -  \" + date3 \n",
     "ax1.set_title(title_date)\n",
     "ax1.legend(loc='upper right', fontsize=8)\n",
     "ax5.legend(loc='upper right', fontsize=8); ax6.legend(loc='upper right', fontsize=8);  ax7.legend(loc='upper right', fontsize=8)\n",
@@ -490,7 +486,7 @@
     "ax1.set_ylabel('Frequency [kHz]'); ax2.set_ylabel('Frequency [kHz]'); ax3.set_ylabel('Frequency [kHz]')\n",
     "\n",
     "# X-axis\n",
-    "ax1.set_title('EuEu');             ax2.set_title('EvEv');             ax3.set_title('EwEw')\n",
+    "ax1.set_title(\"[\" + data_name + \"]  \" + 'EuEu');             ax2.set_title('EvEv');             ax3.set_title('EwEw')\n",
     "ax3.set_xlabel(str_date)\n",
     "\n",
     "# Plot\n",
@@ -546,7 +542,7 @@
     "ax7.set_ylabel('Frequency [kHz]'); ax8.set_ylabel('Frequency [kHz]'); ax9.set_ylabel('Frequency [kHz]')\n",
     "\n",
     "# X-axis\n",
-    "ax1.set_title('Deg. Lin. uv');     ax2.set_title('Deg. Lin. vw');     ax3.set_title('Deg. Lin. wu')\n",
+    "ax1.set_title(\"[\" + data_name + \"]  \" + 'Deg. Lin. uv');     ax2.set_title('Deg. Lin. vw');     ax3.set_title('Deg. Lin. wu')\n",
     "ax4.set_title('Deg. Cir. uv');     ax5.set_title('Deg. Cir. vw');     ax6.set_title('Deg. Cir. wu')\n",
     "ax7.set_title('Ang. uv');          ax8.set_title('Ang. vw');          ax9.set_title('Ang. wu')\n",
     "ax9.set_xlabel(str_date)\n",
@@ -659,7 +655,7 @@
     "date1 = data.epoch[n0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[n1];  date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
     "date3 = data.epoch[n2];  date3 = date3.strftime('%Y/%m/%d %R:%S')\n",
-    "title_date = date1 + \"  -  \" + date2 + \"  -  \" + date3 \n",
+    "title_date = \"[\" + data_name + \"]  \" + date1 + \"  -  \" + date2 + \"  -  \" + date3 \n",
     "ax1.set_title(title_date)\n",
     "ax1.legend(loc='upper right', fontsize=8); ax2.legend(loc='upper right', fontsize=8)\n",
     "\n",
@@ -706,7 +702,7 @@
     "ax1.set_ylabel('Frequency [kHz]'); ax2.set_ylabel('Frequency [kHz]'); ax3.set_ylabel('Frequency [kHz]')\n",
     "\n",
     "# X-axis\n",
-    "ax1.set_title('EuEu cleaned');     ax2.set_title('EvEv cleaned');     ax3.set_title('EwEw cleaned')\n",
+    "ax1.set_title(\"[\" + data_name + \"]  \" + 'EuEu cleaned');     ax2.set_title('EvEv cleaned');     ax3.set_title('EwEw cleaned')\n",
     "ax3.set_xlabel(str_date)\n",
     "\n",
     "# Plot\n",
