--- a/JUICE-CDF-HF-SID6_sample.ipynb
+++ b/JUICE-CDF-HF-SID6_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID6 (PSSR2 surv): L1a QL -- 2023/11/17"
+    "# JUICE RPWI HF SID6 (PSSR2 surv): L1a QL -- 2023/11/18"
    ]
   },
   {
@@ -181,7 +181,7 @@
     "ax2.set_ylabel('Date-Time')\n",
     "ax2.set_xlabel(str_date)\n",
     "#\n",
-    "title_label = '[JUICE/RPWI HF SID-6]  ' + data_name\n",
+    "title_label = '[JUICE/RPWI HF PSSR2-Surv (SID-6)]  ' + data_name\n",
     "ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8)\n",
     "\n",
@@ -289,8 +289,7 @@
     "ax16.plot(data.freq, auto_corr3, '-b', linewidth=.5, label='last')\n",
     "#\n",
     "date1 = data.epoch[n_sweep];  date1 = date1.strftime('First: %Y/%m/%d %R:%S')\n",
-    "title_date = date1\n",
-    "ax1.set_title(title_date)\n",
+    "title_date = \"[\" + data_name + \"]  \" + date1;  ax2.set_title(title_date)\n",
     "ax1.legend(loc='upper right', fontsize=8);  ax2.legend(loc='upper right', fontsize=8);   ax3.legend(loc='upper right', fontsize=8)\n",
     "ax4.legend(loc='upper right', fontsize=8);  ax5.legend(loc='upper right', fontsize=8);   ax6.legend(loc='upper right', fontsize=8)\n",
     "ax7.legend(loc='upper right', fontsize=8);  ax8.legend(loc='upper right', fontsize=8);   ax9.legend(loc='upper right', fontsize=8)\n",
@@ -392,8 +391,7 @@
     "ax16.plot(data.freq, auto_corr3, '-b', linewidth=.5, label='last')\n",
     "#\n",
     "date1 = data.epoch[n_sweep];  date1 = date1.strftime('Mid: %Y/%m/%d %R:%S')\n",
-    "title_date = date1\n",
-    "ax1.set_title(title_date)\n",
+    "title_date = \"[\" + data_name + \"]  \" + date1;  ax2.set_title(title_date)\n",
     "ax1.legend(loc='upper right', fontsize=8);  ax2.legend(loc='upper right', fontsize=8);   ax3.legend(loc='upper right', fontsize=8)\n",
     "ax4.legend(loc='upper right', fontsize=8);  ax5.legend(loc='upper right', fontsize=8);   ax6.legend(loc='upper right', fontsize=8)\n",
     "ax7.legend(loc='upper right', fontsize=8);  ax8.legend(loc='upper right', fontsize=8);   ax9.legend(loc='upper right', fontsize=8)\n",
@@ -497,8 +495,7 @@
     "ax16.plot(data.freq, auto_corr3, '-b', linewidth=.5, label='last')\n",
     "#\n",
     "date1 = data.epoch[n_sweep];  date1 = date1.strftime('Last: %Y/%m/%d %R:%S')\n",
-    "title_date = date1\n",
-    "ax1.set_title(title_date)\n",
+    "title_date = \"[\" + data_name + \"]  \" + date1;  ax2.set_title(title_date)\n",
     "ax1.legend(loc='upper right', fontsize=8);  ax2.legend(loc='upper right', fontsize=8);   ax3.legend(loc='upper right', fontsize=8)\n",
     "ax4.legend(loc='upper right', fontsize=8);  ax5.legend(loc='upper right', fontsize=8);   ax6.legend(loc='upper right', fontsize=8)\n",
     "ax7.legend(loc='upper right', fontsize=8);  ax8.legend(loc='upper right', fontsize=8);   ax9.legend(loc='upper right', fontsize=8)\n",
