--- a/JUICE-CDF-HF-SID5_sample.ipynb
+++ b/JUICE-CDF-HF-SID5_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID5 (PSSR1 surv): L1a QL -- 2023/11/16"
+    "# JUICE RPWI HF SID5 (PSSR1 surv): L1a QL -- 2023/11/18"
    ]
   },
   {
@@ -104,6 +104,8 @@
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
     "data_name = 'SID05_20231024-0046.cdf'\n",
+    "data_name = 'SID05_20231117-1603.cdf'\n",
+    "data_name = 'SID05_20231117-1611.cdf'\n",
     "\n",
     "# 202310 -- FS\n",
     "#data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202310_FS/cdf/'        # CDF data folder\n",
@@ -235,7 +237,7 @@
     "ax3.set_ylabel('Date-Time')\n",
     "ax3.set_xlabel(str_date)\n",
     "#\n",
-    "title_label = '[JUICE/RPWI HF SID-5] ' + data_name\n",
+    "title_label = '[JUICE/RPWI HF PSSR1-Surv (SID-5)]  ' + data_name\n",
     "ax1.set_title(title_label);  \n",
     "ax1.legend(loc='upper right', fontsize=8); ax2.legend(loc='upper right', fontsize=8);\n",
     "\n",
@@ -299,7 +301,7 @@
     "date1 = data.epoch[n0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[n1];  date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
     "date3 = data.epoch[n2];  date3 = date3.strftime('%Y/%m/%d %R:%S')\n",
-    "title_date = date1 + \"  -  \" + date2 + \"  -  \" + date3 \n",
+    "title_date = \"[\" + data_name + \"]  \" + date1 + \"  -  \" + date2 + \"  -  \" + date3 \n",
     "cal.set_title(title_date)\n",
     "cal.legend(loc='upper right', fontsize=8)\n",
     "\n",
@@ -347,7 +349,7 @@
     "ax1.set_ylabel('Frequency [kHz]')\n",
     "\n",
     "# X-axis\n",
-    "ax1.set_title('EE')\n",
+    "ax1.set_title(\"[\" + data_name + \"]  \" + 'EE')\n",
     "ax1.set_xlabel(str_date)\n",
     "\n",
     "# Plot\n",
